# django_core_service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  entrypoint-celery.sh  entrypoint.sh  pyproject.toml
.github/workflows/: main.yaml
src/: manage.py
src/common_services/factories/: __init__.py  permission_factory.py  project_factory.py  project_member_factory.py  role_factory.py
src/common_services/kafka/: event_driver.py  send_event.py
src/common_services/middlewares/: __init__.py  auth_middleware.py  jwt_auth_middleware.py
src/common_services/mixins/: audit_model_mixin.py
src/common_services/permissions/: check_permissions.py  project_members_permissions.py  project_permission.py
src/common_services/services/: email_service.py
src/common_services/utils/: decode_jwt_token.py  generate_jwt_token.py  generate_mock_jwt.py
src/django_core_service/: asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
src/projects/: tasks.py  urls.py
src/projects/models/: __init__.py  access_rights.py  invite.py  permission.py  project.py  project_member.py  role.py
src/projects/serializers/: project_memebers_serializer.py  project_serializer.py
src/projects/services/: project_invite_service.py  project_members_service.py  project_service.py
src/projects/views/: __init__.py  invites.py  project_members.py  projects.py
src/tasks/models/: task.py  task_notification.py
src/tickets/: signals.py  tasks.py  urls.py
src/tickets/models/: ticket.py  ticket_notification.py
src/tickets/permissions/: tickets_permission.py
(+8 files in other folders)
