[project]
name = "django-core-service"
version = "0.1.0"
description = ""
authors = [
    {name = "DenisHrtn",email = "denispython16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (==4.2.6)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "django-health-check (>=3.18.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "5.12.0"
flake8 = "^7.1.1"
mypy = "^1.14.1"
pylint = "^3.3.3"
black = "^24.10.0"
pre-commit = "^4.1.0"

